Fix white space at bottom

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,15 @@
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 
-body {
-  background-color: #f7fafc !important;
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.content {
+  flex: 1;
 }
