--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,24 +1,22 @@
 .footer {
-    position: sticky;
-    bottom: 0;
     background-color: #2a2a2a; /* Dark background */
     color: #abedd8; /* Light text */
-    text-align: right;
     padding: 20px;
-    margin-top: 20px;
-    margin-bottom: 0px;
-    border-radius: 15px 15px 0 0;
+    margin-top: auto ;
 }
 
-.p {
-    margin: 0;
-    font-size: 20px;
+.cc-c {
+    margin-top: 10px; /* Adjust as needed */
+    margin-bottom: 0; /* Remove extra bottom margin */
+    font-size: 10px;
+    text-align: center;
 }
 
 .social-media-links {
-    margin-bottom: 10px;
-}
-
-.social-media-links .social-icon {
-    margin: 0 5px;
-}
+        display: flex;
+        justify-content: center;
+        align-items: center; 
+        gap: 30px; 
+        padding: 10px;
+    }
+    
