--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -5,7 +5,6 @@
     background-color: #2a2a2a;
     padding: 0.5rem 1rem;
     color: #abedd8;
-    border-radius: 0 0 15px 15px;
 }
 
 .navbar-brand {
